--- a/dissertation.sty
+++ b/dissertation.sty
@@ -34,6 +34,9 @@
 %\usepackage{etoolbox}
 %\usepackage{dtklogos}
 \usepackage{thmtools}
+\usepackage{minted}
+\setminted[haskell]{escapeinside=@@}
+\newcommand{\hs}{\mintinline{haskell}}
 
 
 %----------------- Using makeidx ----------------------------------------------%
