Added a couple of sections from the paper

--- a/dissertation.bib
+++ b/dissertation.bib
@@ -618,6 +618,43 @@ url = {https://EconPapers.repec.org/RePEc:bes:amstat:v:59:y:2005:m:august:p:276-
   pages={21–34}
 }
 
+@incollection{gordon2014probabilistic,
+  title={Probabilistic programming},
+  author={Gordon, Andrew D and Henzinger, Thomas A and Nori, Aditya V and Rajamani, Sriram K},
+  booktitle={Proceedings of the on Future of Software Engineering},
+  pages={167--181},
+  year={2014}
+}
+
+@book{anderson1999lapack,
+  title={LAPACK Users' guide},
+  author={Anderson, Edward and Bai, Zhaojun and Bischof, Christian and Blackford, Susan and Dongarra, Jack and Du Croz, Jeremy and Greenbaum, Anne and Hammarling, Sven and McKenney, Alan and Sorensen, Danny},
+  volume={9},
+  year={1999},
+  publisher={Siam}
+}
+
+@inproceedings{Bu01,
+ author = {Bussche, Jan Van den},
+ shortauthor = {J. Bussche},
+ title = {Applications of {Alfred Tarski}'s Ideas in Database Theory},
+ booktitle = {CSL'01},
+ longbooktitle = {CSL'01: Proceedings of the 15th International Workshop on Computer Science Logic},
+ year = {2001},
+ isbn = {3-540-42554-3},
+ pages = {20--37},
+ publisher = {Springer-Verlag},
+ address = {London, UK},
+}
+
+@misc{wiki:BayesianNetwork,
+   author = "{Wikipedia}",
+   title = "Bayesian network",
+   year = "2020",
+   url = {https://en.wikipedia.org/wiki/Bayesian_network},
+   note = {(Accessed: 2020-02-16)}
+}
+
 @misc{Armando2020,
   author = {Armando Santos},
   title = {Selective Functors \& Probabilistic Programming},
