Updates from Overleaf

--- a/dissertation.bib
+++ b/dissertation.bib
@@ -664,3 +664,33 @@ url = {https://EconPapers.repec.org/RePEc:bes:amstat:v:59:y:2005:m:august:p:276-
   howpublished = {\url{https://github.com/bolt12/master-thesis}},
   commit = {e1159abed522ff28f7df3559f0cf40a781de7e04}
 }
+
+@inproceedings{Claessen1999FunctionalPA,
+  title={Functional Pearls: A Poor Man's Concurrency Monad},
+  author={K. Claessen},
+  year={1999}
+}
+
+@inproceedings{Scholz1995ACM,
+  title={A concurrency monad based on constructor primitives: or, being first-class is not enough},
+  author={E. Scholz},
+  year={1995}
+}
+
+@inproceedings{10.1145/3406088.3409019,
+author = {Santos, Armando and Oliveira, Jos\'{e} N.},
+title = {Type Your Matrices for Great Good: A Haskell Library of Typed Matrices and Applications (Functional Pearl)},
+year = {2020},
+isbn = {9781450380508},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3406088.3409019},
+doi = {10.1145/3406088.3409019},
+abstract = {We study a simple inductive data type for representing correct-by-construction matrices. Despite its simplicity, it can be used to implement matrix-manipulation algorithms efficiently and safely, performing in some cases faster than existing alternatives even though the algorithms are written in a direct and purely functional style. A rich collection of laws makes it possible to derive and optimise these algorithms using equational reasoning, avoiding the notorious off-by-one indexing errors when fiddling with matrix dimensions. We demonstrate the usefulness of the data type on several examples, and highlight connections to related topics in category theory.},
+booktitle = {Proceedings of the 13th ACM SIGPLAN International Symposium on Haskell},
+pages = {54–66},
+numpages = {13},
+keywords = {Haskell, Data Analysis, Quantum Programming, Matrices, Probabilistic Programming, Linear Algebra of Programming},
+location = {Virtual Event, USA},
+series = {Haskell 2020}
+}
