--- a/dissertation.bib
+++ b/dissertation.bib
@@ -677,6 +677,17 @@ url = {https://EconPapers.repec.org/RePEc:bes:amstat:v:59:y:2005:m:august:p:276-
   year={1995}
 }
 
+@article{samet1984quadtree,
+  title={The quadtree and related hierarchical data structures},
+  author={Samet, Hanan},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={16},
+  number={2},
+  pages={187--260},
+  year={1984},
+  publisher={ACM New York, NY, USA}
+}
+
 @inproceedings{10.1145/3406088.3409019,
 author = {Santos, Armando and Oliveira, Jos\'{e} N.},
 title = {Type Your Matrices for Great Good: A Haskell Library of Typed Matrices and Applications (Functional Pearl)},
